--- a/template.yaml
+++ b/template.yaml
@@ -12,7 +12,7 @@ Parameters:
     ConstraintDescription: 'Required. Can be characters and underscore only. No numbers or special characters allowed.'
   CorsOrigin:
     Type: String
-    Default: ''
+    Default: "'*'"
     Description: (Optional) Cross-origin resource sharing (CORS) Origin. You can specify a single origin, all "*" or leave empty and no CORS will be applied.
     MaxLength: 250
 
